# harmony

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile  FHIR_IMAGINGSTUDY.md  NOTICE.txt  docker-compose.yml  readme.md  test_index_creation.sh  warp.md
.ai/: instructions.txt
.aiassistant/rules/: ai.md
.github/workflows/: build.yml  publish.yml
.junie/: guidelines.md
config/: config.toml
config/pipelines/: basic-echo.toml
crates/dicom_json_tool/: Cargo.toml
crates/dicom_json_tool/src/: lib.rs  main.rs
crates/dicom_json_tool/tests/: json_roundtrip.rs  part10_write_read.rs
crates/dicom_json_tool/tmp/dicom/: roundtrip_test.dcm
crates/dicom_json_tool/tmp/dicom_json/: to_part10.json
crates/dimse/: Cargo.toml
crates/dimse/src/: config.rs  error.rs  lib.rs  router.rs  scp.rs  scu.rs  tls.rs  types.rs
crates/jmix-rust/tmp/: signing_key.pem  verify_key.pem
crates/transform/: Cargo.toml
crates/transform/src/: lib.rs
dev/: dicom-json.md  dicom-testing.md  dicomweb.md  jmix-dev-testing.md  profiling.md  proxy.md
docs/: README.md  adapters.md  backends.md  configuration.md  dimse-integration.md  endpoints.md  envelope.md  fhir_imagingstudy.md  getting-started.md  includefield-fix.md  management-api.md  middleware.md  router.md  security.md  system-description.md  testing.md  todo.txt
docs/architecture/: PHASE_5_STATUS.md  PHASE_6_COMPLETE.md  REFACTORING_SUMMARY.md  diagrams.md  protocol-adapters.md
examples/: basic.toml  fhir-dicom.toml  fhir.toml  incoming.toml  outgoing.toml  proxy-config.toml  routing_middleware.rs  test-config.toml
examples/basic-echo/: config.toml
examples/basic-echo/pipelines/: basic-echo.toml
examples/config/: config.toml
examples/config/pipelines/: basic-echo.toml  dicom-backend.toml  dicom-scp.toml  dicomweb.toml  fhir-dicom.toml  fhir.toml  jmix_performance.toml  transform-example.toml
examples/config/transforms/: dicom_to_imagingstudy_simple.json  metadata_set_dimse_op.json
examples/custom_endpoint/: Cargo.toml
examples/custom_endpoint/src/: lib.rs
examples/default/: config.toml
examples/default/pipelines/: default.toml  dicomweb.toml  dimse-integration.toml  fhir-dicom.toml  fhir.toml  transform-example.toml
examples/default/transforms/: schema.yaml
examples/dicom-backend/: config.toml
examples/dicom-backend/pipelines/: dicom-backend.toml
examples/dicom-scp/: README.md  config.toml  demo.sh
examples/dicom-scp/pipelines/: dicom-scp.toml
examples/dicomweb/: config.toml
examples/dicomweb/pipelines/: dicomweb.toml
examples/fhir/: README.md  config.toml  demo.sh
examples/fhir-to-dicom/: README.md  config.toml
examples/fhir-to-dicom/pipelines/: fhir-dicom.toml
examples/fhir-to-dicom/transforms/: fhir_to_dicom_params.json
examples/fhir/pipelines/: fhir.toml
examples/fhir_dicom/: README.md  config.toml  demo.sh
examples/fhir_dicom/pipelines/: fhir_imagingstudy.toml
examples/fhir_dicom/transforms/: enrich_with_jmix_urls.json
examples/http-backend/: config.toml
examples/http-backend/pipelines/: http-backend.toml
examples/jmix/: README.md  config.toml
examples/jmix-to-dicom/: config.toml
examples/jmix-to-dicom/pipelines/: jmix_to_dicom.toml
examples/jmix/pipelines/: jmix-performance.toml
examples/old/: incoming.toml  outgoing.toml  test-config.toml
examples/transform/: config.toml  demo.sh
examples/transform/pipelines/: transform-example.toml
modules/transform_loader/: mod.rs
modules/transforms/: engine.rs  example.rs  mod.rs  transforms.rs
samples/jolt/: http_flatten.json
src/: file.rs  globals.rs  lib.rs  main.rs  utils.rs
src/adapters/: mod.rs
src/adapters/dimse/: mod.rs  query_provider.rs  status_mapper.rs
src/adapters/http/: mod.rs  router.rs
src/backends/: config.rs  dicom.rs  mod.rs
src/config/: config.rs  logging_config.rs  mod.rs  proxy_config.rs  tests.rs
src/endpoints/: basic.rs  config.rs  custom.rs  dicom.rs  fhir.rs  jdx.rs  jmix.rs  mod.rs
src/groups/: config.rs
src/integrations/: mod.rs
src/integrations/dimse/: mod.rs  pipeline_query_provider.rs
src/middleware/: auth.rs  config.rs  connect.rs  jwtauth.rs  mod.rs
src/models/: mod.rs  protocol.rs
src/models/backends/: backends.rs  config.rs  dicom.rs  http.rs  mod.rs
src/models/endpoints/: config.rs  custom.rs  dicom.rs  echo.rs  endpoint.rs  endpoint_type.rs  fhir.rs  http.rs  jmix.rs  mod.rs
src/models/envelope/: envelope.rs  mod.rs  tests.rs
src/models/groups/: config.rs
src/models/services/: mod.rs  (+2 more)
src/network/: config.rs
src/pipeline/: executor.rs  mod.rs  tests.rs
src/router/: dispatcher.rs  mod.rs  pipeline_runner.rs  route_config.rs  scp_launcher.rs
src/runbeam_api/: client.rs  jwt.rs  mod.rs
src/storage/: database_manager.rs  database_manager_examples.md  filesystem.rs  mod.rs
tests/: config_validation.rs  dicom_backend_bridge.rs  dicom_find_qrscp.rs  dicom_get_qrscp.rs  dicom_get_samples.rs  dicom_move_persistent_relocate.rs  dicom_move_qrscp.rs  dicom_persistent_scp.rs  dicomweb_frames_qrscp.rs  dicomweb_service.rs  dicomweb_to_dicom_middleware.rs  dimse_scp_starts.rs  fhir_pipeline_config_test.rs  fhir_service.rs  incoming_middleware_status.rs  jmix_skip_backends.rs  mod.rs  pipeline_basic_auth.rs  pipeline_jmix_builder.rs  pipeline_jwt_auth.rs  pipeline_jwt_auth_rs256.rs  router_conflicts.rs  router_runs.rs  smoke_http_echo.rs  storage_fs.rs  transform_middleware_integration.rs
tests/config/: config_validation.rs
tests/dicom/: dicom_backend_bridge.rs  dicom_find_qrscp.rs  dicom_get_qrscp.rs  dicom_get_samples.rs  dicom_move_persistent_relocate.rs  dicom_move_qrscp.rs  dimse_scp_starts.rs  mod.rs
tests/dicomweb/: common.rs  dicomweb_bridge_middleware.rs  dicomweb_frames_qrscp.rs  dicomweb_service.rs  dicomweb_to_dicom_middleware.rs  integration.rs
tests/fhir/: fhir_backend.rs  fhir_service.rs  mod.rs
tests/http/: http_backend.rs  mod.rs  smoke_http_echo.rs
tests/jmix/: jmix_skip_backends.rs  mod.rs  pipeline_jmix_builder.rs
tests/router/: router_runs.rs
tests/services/: management_test.rs
(+86 files in other folders)
