[workspace]
members = [
    ".",
    "crates/dimse",
    "crates/dicom_json_tool",
]
resolver = "2"

[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

[lib]
name = "harmony"
path = "src/lib.rs"

[dependencies]
dimse = { path = "crates/dimse" }
dicom_json_tool = { path = "crates/dicom_json_tool" }
dicom-object = "0.9"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tower = "0.5.2"
futures-util = "0.3"
async-trait = "0.1"
toml = "0.8.22"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
jsonwebtoken = "9.3"
base64 = "0.22.1" # Add this dependency
http = "1"
once_cell = "1.21.3"
hyper = "1.7.0"
router = "0.6.0"
url = "2"


[dev-dependencies]
tokio-test = "0.4"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
