[workspace]
members = [
    ".",
    "crates/dimse",
    "crates/dicom_json_tool",
    "crates/transform",
]
resolver = "2"

[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

[lib]
name = "harmony"
path = "src/lib.rs"

[dependencies]
dimse = { path = "crates/dimse" }
dicom_json_tool = { path = "crates/dicom_json_tool" }
harmony_transform = { path = "crates/transform" }

jmix-rs = { path = "../jmix/jmix-rust" }

dicom-object = "0.9"
dicom-pixeldata = { version = "0.9", features = ["image", "rle", "jpeg"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tower = "0.5.2"
futures-util = "0.3"
async-trait = "0.1"
toml = "0.8.22"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
jsonwebtoken = "9.3"
base64 = "0.22.1" # Add this dependency
http = "1"
once_cell = "1.21.3"
url = "2"
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2.5"
fs_extra = "1.3"
tempfile = "3.10"
uuid = { version = "1", features = ["v4"] }
redb = "2.1"

[dev-dependencies]
tokio-test = "0.4"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
dicom-dictionary-std = "0.9"
dicom-core = "0.9"
tempfile = "3.10"
serial_test = "3.0"

[profile.profiling]
inherits = "release"
debug = true
opt-level = 2