[workspace]
members = [
    "crates/*",
]
resolver = "2"

[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

[lib]
name = "harmony"
path = "src/lib.rs"

[dependencies]
dimse = { path = "crates/dimse" }
dicom_json_tool = { path = "crates/dicom_json_tool" }
harmony_transform = { path = "crates/transform" }

#jmix-rs = { path = "../jmix/jmix-rust" }
jmix-rs = "0.3.1"

dicom-object = "0.9"
dicom-pixeldata = { version = "0.9", features = ["image", "rle", "jpeg"] }
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tower = "0.5.2"
futures-util = "0.3"
async-trait = "0.1"
toml = "0.8.22"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
jsonwebtoken = "9.3"
base64 = "0.22.1" # Add this dependency
http = "1"
once_cell = "1.21.3"
url = "2"
thiserror = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2.5"
fs_extra = "1.3"
tempfile = "3.10"
uuid = { version = "1", features = ["v4"] }
redb = "2.1"
matchit = "0.8"
anyhow = "1.0.100"
tokio-util = "0.7.16"

[dev-dependencies]
tokio-test = "0.4"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
dicom-dictionary-std = "0.9"
dicom-core = "0.9"
tempfile = "3.10"
serial_test = "3.0"

# Test organization

# DICOM tests
[[test]]
name = "dicom_backend_bridge"
path = "tests/dicom/dicom_backend_bridge.rs"

[[test]]
name = "dicom_find_qrscp"
path = "tests/dicom/dicom_find_qrscp.rs"

[[test]]
name = "dicom_get_qrscp"
path = "tests/dicom/dicom_get_qrscp.rs"

[[test]]
name = "dicom_get_samples"
path = "tests/dicom/dicom_get_samples.rs"

[[test]]
name = "dicom_move_persistent_relocate"
path = "tests/dicom/dicom_move_persistent_relocate.rs"

[[test]]
name = "dicom_move_qrscp"
path = "tests/dicom/dicom_move_qrscp.rs"

[[test]]
name = "dimse_scp_starts"
path = "tests/dicom/dimse_scp_starts.rs"

# DICOMweb tests
[[test]]
name = "dicomweb_frames_qrscp"
path = "tests/dicomweb/dicomweb_frames_qrscp.rs"

[[test]]
name = "dicomweb_service"
path = "tests/dicomweb/dicomweb_service.rs"

[[test]]
name = "dicomweb_to_dicom_middleware"
path = "tests/dicomweb/dicomweb_bridge_middleware.rs"

[[test]]
name = "dicomweb_integration"
path = "tests/dicomweb/integration.rs"

# FHIR tests
[[test]]
name = "fhir_service"
path = "tests/fhir/fhir_service.rs"

# JMIX tests
[[test]]
name = "jmix_skip_backends"
path = "tests/jmix/jmix_skip_backends.rs"

[[test]]
name = "pipeline_jmix_builder"
path = "tests/jmix/pipeline_jmix_builder.rs"

# Management tests
[[test]]
name = "management_service"
path = "tests/services/management_test.rs"

[profile.profiling]
inherits = "release"
debug = true
opt-level = 2
